Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 2.36*

***	Add parameters to Verilog::Parser instant callback. [Monte Becker]

* Verilog::Language 2.360 2006/09/14

***	Added Preproc keep_whitespace=>0 option to delete whitespace.

***	Preprocessor now strips all DOS carrage returns.

***	Allow Verilog::Getopt::file_path to resolve module_dir and/or incdirs.
	Use only module_dir to resolve Netlist modules.  [by John Tseng]

****    Vrename --crypt now uses lower case random identifiers for readability.

****	Fix DOS carrage returns in multiline defines.  [Ralf Karge]

* Verilog::Language 2.352 2006/08/22

***	Fix compile errors under Cygwin.  [Mattan Tsachi]

* Verilog::Language 2.351 2006/06/08

***     Add vhier --language option.  [Sean Nazareth]

****	Fix Getopt::file_path when dir names match file names. [by John Tseng]

* Verilog::Language 2.350 2006/05/19

***	Vpm now emits $timeformat when passed the --timeformat-units switch.

***	SigParser and the Netlister now ignore function and task IOs.

****	Preproc line numbers being off due to multi-line defines.  [Mat Zeno]

****	Fix `include `DEFINE.

* Verilog::Language 2.341 2006/02/06

***	Add SystemVerilog `0, `1, `x, `z.  [John Tseng]

****	Fix module #() parameter declarations.  [Andy Kuo]

****	Fix "output reg" and "output wire" declarations.  [Andy Kuo]

* Verilog::Language 2.340 2006/01/16

***     Added vpm --minimum switch.

****	Added Verilog::Language::language_standard to allow setting
	which language standard (1995,2001,SystemVerilog) is used for keywords.

****	Fix vhier -o option. [Sean Nazareth]

****	Add vhier --modules and --missing-modules options. [Sean Nazareth]

* Verilog::Language 2.331 2005/10/05

***     Added vhier example program. [Vasu Arasanipalai]

* Verilog::Language 2.330 2005/09/06
